# lumina

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh-CN.md  TODO.md  build.yaml  flutter_launcher_icons.yaml  pubspec.yaml
.github/prompts/: AGENT_INSTRUCTIONS.md
.github/workflows/: build_android.yml  build_release.yml  flutter_ci.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
ios/Runner/: AppDelegate.swift  Info.plist  NativePickerPlugin.swift  ReaderPageTurnPlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/src/: app.dart  global_share_handler.dart
lib/web_src/: controller.js  pagination.css  reader_assets.dart  skeleton.css
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: epub.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: lumina_rust.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: lumina_rust.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: .gitignore  generate_subsets.py
test/: epub_import_test.dart  epub_import_test.mocks.dart  epub_parser_test.dart  pdf_file_type_detector_test.dart  pdf_import_service_test.dart  pdf_import_workers_test.dart  shelf_book_pdf_test.dart  webdav_sync_test.dart  webdav_sync_test.mocks.dart
tool/: build_web_assets.dart
tools/: build_web_assets.dart
web_assets/: pagination.css  skeleton.css
(+166 files in other folders)
