[package]
name = "lumina_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
once_cell = "1"
parking_lot = "0.12"
rc-zip = { version = "5", features = ["deflate"] }
positioned-io = "0.3"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true